# image-convolution-hpc

./: CMakeLists.txt  Makefile  README.md
include/: benchmark.h  convolutions.h  image_utils.h
scripts/: plot_convolution_roofline.py
src/: benchmark.cpp  convolutions.cpp  image_utils.cpp  main.cpp  main_baseline.cpp  main_mpi.cpp
src/kernels/: 00_convolution_baseline.cpp  01_convolution_separable.cpp  02_convolution_sliding_window.cpp  02_convolution_vertical_simd_sliding.cpp  03_convolution_sliding_window_avx2.cpp  03_convolution_tiled_avx2.cpp  03_convolution_tiled_avx2_threads_12.cpp  04_convolution_tiled_avx2_threads_06.cpp  05_convolution_tiled_avx2_threads_12.cpp
